gccida/c1/expand_builtin_constant_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_constant_p/src/builtins.c:1911:41: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CONSTANT_P_RTX, ( machine_mode)v2, v3); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_constant_p/src/obj/builtins.o] Error 1
